test/e2e/fixtures/logservice-basic/logservice-v2.yaml
---
apiVersion: getambassador.io/v3alpha1
kind: LogService
metadata:
  name: custom-http-logging
spec:
  ambassador_id: [(env('SLOT'))]
  service: (join(':', [join('.', ['als', $namespace]), '80']))
  grpc: true
  protocol_version: v2
  driver: http
  driver_config:
    additional_log_headers:
      - header_name: included-on-all
      - header_name: not-included-on-trailer
        during_trailer: false
      - header_name: not-included on resp-trail
        during_trailer: false
        during_response: false
      - header_name: not-anywhere
        during_trailer: false
        during_response: false
        during_request: false
  flush_interval_time: 1
  flush_interval_byte_size: 1
