test/e2e/fixtures/logservice-basic/queries-warmup.json
[
  {"url": "/target/warmup", "method": "GET"},
  {"url": "/als/logs", "method": "GET"}
]
